@@ -21,6 +21,7 @@
 namespace PlasmaScriptengineKimono {
 
     using System;
+    using System.IO;
     using System.Text;
     using System.Reflection;
     using System.Collections.Generic;
@@ -46,7 +47,12 @@ namespace PlasmaScriptengineKimono {
             // the newly loaded assembly might contain reference other bindings that need to be initialized
             foreach (AssemblyName an in appletAssembly.GetReferencedAssemblies()) {
                 // if the binding has already been initialized (e.g. in SmokeInvocation.InitRuntime()), continue.
-                Assembly a = Assembly.Load(an);
+                Assembly a = null;
+                try {
+                    a = Assembly.Load(an);
+                } catch (FileNotFoundException e) {
+                    a = Assembly.LoadFile(Path.Combine(Path.GetDirectoryName(appletAssembly.Location), an.Name + ".dll"));
+                }
                 if (SmokeInvocation.InitializedAssemblies.Contains(a)) continue;
                 AssemblySmokeInitializer attr = (AssemblySmokeInitializer) Attribute.GetCustomAttribute(a, typeof(AssemblySmokeInitializer));
                 if (attr != null) attr.CallInitSmoke();
